# xla

./: .jax_configure.bazelrc  workspace2.bzl
.github/workflows/: build_plugin.yml
jax_mpi_plugin/: .gitignore  README.md  build.sh  download_bazel.py
jax_mpi_plugin/python_package/: pyproject.toml
jax_mpi_plugin/python_package/jax_plugins/mpi_plugin/: __init__.py
jax_mpi_plugin/xla_mpi_plugin/: BUILD  tfrt_cpu_pjrt_client_mpi.cc  tfrt_cpu_pjrt_client_mpi.h  xla_mpi_plugin.cc
mpi_test/: mpirun.txt  test.py  test2.py  test3.py  test4.py  test5.py  test6.py
xla/: BUILD  debug_options_flags.cc  executable_run_options.h  xla.proto
xla/client/: xla_builder.cc
xla/hlo/ir/: dfs_hlo_visitor_with_default.h  hlo_computation.cc  hlo_instruction.cc
xla/pjrt/: BUILD  tfrt_cpu_pjrt_client.cc  tfrt_cpu_pjrt_client.h
xla/pjrt/cpu/: BUILD  mpi_collectives.cc  mpi_collectives.h
xla/python/: BUILD  xla.cc  xla_client.py  xla_compiler.cc
xla/python/xla_extension/: __init__.pyi
xla/service/: async_collective_creator.cc  collective_ops_utils.h  custom_call_target_registry.cc  elemental_ir_emitter.cc  hlo_verifier.cc
xla/service/cpu/: BUILD  collectives_interface.h  cpu_compiler.cc  cpu_runtime.cc  cpu_runtime.h  in_process_collectives.cc  in_process_collectives.h  ir_emitter.cc  ir_emitter.h  simple_orc_jit.cc
xla/service/cpu/runtime/: collectives.cc
