[project]
name = "jax-mpi"
version = "0.4.20"

[project.entry-points.'jax_plugins']
mpi_plugin = 'mpi_plugin'

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
plat-name = "manylinux2014_x86_64"

[tool.setuptools.package-data]
"*" = ["*.so"]
